trabajo en la seccion de los 3 banners, finalizada la seccion de somos green food

--- a/css/slider-agro.css
+++ b/css/slider-agro.css
@@ -117,6 +117,12 @@
     }
 }
 
+@media (min-width: 1320px) {
+    .carousel-caption {
+        height: 35%;
+    }
+}
+
 @media (min-width: 1440px) {
 
     .carousel-inner {
