--- a/css/banner-agro.css
+++ b/css/banner-agro.css
@@ -60,7 +60,7 @@
 	}
 
 	.row-banner {
-		bottom: 40px;
+		bottom: 30px;
 		position: relative;
 		margin: 0;
 		padding: 0;
@@ -69,7 +69,7 @@
 
 @media (min-width: 1440px) {
 	.row-banner {
-		bottom: 90px;
+		bottom: 60px;
 		position: relative;
 		margin: 0;
 		padding: 0;
@@ -149,6 +149,7 @@
 	font-size: 13px !important;
 	border-radius: 0 !important;
 	width: 120px;
+	height: 40px;
 	position: relative;
 	top: 20px;
 }
