--- a/css/header-agro.css
+++ b/css/header-agro.css
@@ -307,6 +307,22 @@
 
 }
 
+@media (min-width: 1320px) {
+    .cart-ico {
+        right: 150px;
+    }
+
+    .menu-position {
+        left: 230px;
+    }
+
+    .header .search {
+        margin-top: 0;
+        position: relative;
+        left: 250px;
+    }
+}
+
 /* Extra large devices (large desktops, 1440px and up)*/
 @media (min-width: 1440px) {
 
@@ -443,7 +459,7 @@
     .header .search {
         margin-top: 0;
         position: relative;
-        left: 370px;
+        left: 370px !important;
     }
 
     /*estilo y posicionamiento del dato telefonico en la barra de welcome*/
