--- a/css/main.css
+++ b/css/main.css
@@ -9,3 +9,11 @@ section {
     min-height: 30vh;
     min-width: 20vw;
 }
+
+html,
+body {
+    max-width: 100vw;
+    /*max-width: 100vw; or 100%*/
+    overflow-x: hidden;
+    height: auto !important;
+}
