arreglos al toggler de preguntas frecuentes que tmb se visualizaba en el menu bar cuando la resolucion era small, ya se oculto y se quedo viendose solo para las preguntas

--- a/css/preguntas-frecuentes-agro.css
+++ b/css/preguntas-frecuentes-agro.css
@@ -4,6 +4,37 @@
     }
 }
 
+@media (min-width:300px) and (max-width: 767px) {
+    .navbar-toggler [data-toggle="collapse"]:after {
+        display: none;
+    }
+
+    .navbar [data-toggle="collapse"]:after {
+        display: none;
+    }
+}
+
+
+[data-toggle="collapse"]:after {
+    display: inline-block;
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    content: "\f054";
+    transform: rotate(-90deg);
+    transition: all linear 0.25s;
+    float: right;
+}
+
+[data-toggle="collapse"].collapsed:after {
+    transform: rotate(90deg);
+}
+
+
+
 .card {
     border: 0 !important;
 }
